infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  labels:
    name: client-depl
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: client-pod
      tier: frontend
  template:
    metadata:
      name: client-pod
      labels:
        name: client-pod
        tier: frontend
    spec:
      containers:
      - name: client-container
        image: rhapsodyx021/clinic-app-client:2.0
        ports:
        - containerPort: 3000
