infra/k8s/server-login-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-login-depl
  labels:
    name: server-login-depl
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: server-login-pod
      tier: backend
  template:
    metadata:
      name: server-login-pod
      labels:
        name: server-login-pod
        tier: backend
    spec:
      containers:
      - name: server-login-container
        image: rhapsodyx021/clinic-app-server-login:2.0
        ports:
        - containerPort: 4000
