infra/k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
  labels:
    name: client-srv
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - name: client-srv
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    name: client-pod
    tier: frontend
