infra/k8s/server-login-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-login-srv
  labels:
    name: server-login-srv
    tier: backend
spec:
  type: ClusterIP
  ports:
  - name: server-login-srv
    protocol: TCP
    port: 4000
    targetPort: 4000
  selector:
    name: server-login-pod
    tier: backend
